<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.topic.TopicViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/topic_app_bar_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fitsSystemWindows="true"
      android:background="@color/component_color_shared_activity_toolbar_color"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      app:layout_constraintBottom_toTopOf="@+id/topic_tabs_viewpager_container"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/topic_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/component_color_shared_activity_toolbar_color"
        android:fontFamily="sans-serif"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Widget.AppCompat.ActionBar"
        app:navigationContentDescription="@string/navigate_up"
        app:navigationIcon="?attr/homeAsUpIndicator">

        <TextView
          android:id="@+id/topic_toolbar_title"
          style="@style/MarqueeToolbarTitleTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="20dp"
          android:text="@{viewModel.topicToolbarTitleLiveData}" />
      </androidx.appcompat.widget.Toolbar>

      <com.google.android.material.tabs.TabLayout
        android:id="@+id/topic_tabs_container"
        style="@style/AppTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/topic_fragment_tab_layout_margin_start"
        android:layout_marginEnd="@dimen/topic_fragment_tab_layout_margin_end"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:tabBackground="@color/component_color_shared_activity_toolbar_color"
        app:tabGravity="fill"
        app:tabIconTint="@color/component_color_shared_tab_icon_color_selector"
        app:tabIndicatorColor="@android:color/white"
        app:tabIndicatorHeight="@dimen/topic_fragment_tab_layout_tab_indicator_height"
        app:tabMode="fixed"
        app:tabTextAppearance="@style/AppTabTextAppearance"
        app:tabTextColor="@color/component_color_shared_tab_icon_color_selector" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
      android:id="@+id/topic_tabs_viewpager_container"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/topic_app_bar_layout">

      <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/topic_tabs_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

      <View
        android:id="@+id/topic_shadow_view"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/toolbar_drop_shadow" />
    </FrameLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
