...
  <string name="voiceover_language_icon_spotlight_hint">Tap to change the voiceover language.</string>
  <string name="progress_database_full_dialog_title">Maximum storage capacity reached</string>
  <string name="progress_database_full_dialog_description">Saved progress for the lesson \"%s\" will be deleted.</string>
  <string name="progress_database_full_dialog_continue_button">Continue</string>
  <string name="progress_database_full_dialog_leave_without_saving_progress_button">Leave without saving progress</string>
  <string name="progress_database_full_dialog_back_to_lesson_button">Back to lesson</string>
  <string name="topic_practice_master_these_skills">Master These Skills</string>
  <string name="topic_name_text_view">Ratios and Proportional Reasoning</string>
  <string name="topic_practice_skills_description">Select skills that you would like to practice.</string>
  <string name="topic_practice_start">Start</string>
  <string name="info_tab_content_description">Details about the topic.</string>
  <string name="revision_tab_content_description">Revise concepts learned from completed lessons here.</string>
  <string name="practice_tab_content_description">Practice the concepts learned from completed lessons.</string>
  <string name="lessons_tab_content_description">Tap here to start playing a lesson.</string>
...
