<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.topic.lessons.TopicLessonViewModel" />
  </data>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/story_summary_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_shared_screen_quaternary_background_color"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:paddingBottom="@dimen/topic_lessons_fragment_layout_padding_bottom"
    android:scrollbars="none"
    app:data="@{viewModel.topicLessonLiveData}"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</layout>
